--- a/php/InClassExercises/Module3/LotteryWins/Lottery.html
+++ b/php/InClassExercises/Module3/LotteryWins/Lottery.html
@@ -17,7 +17,7 @@
 			<h2>Lottery Wins By Day</h2>
 			<form id="lotteryForm">
 				<div class="form-group">
-					<label for="num">Day</label>
+					<label for="day">Day</label>
 					<select id="day" name="day">
 						<option value="Monday">Monday</option>
 						<option value="Tuesday">Tuesday</option>
@@ -27,7 +27,7 @@
 					</select>
 				</div>
 				<button id="btnAdd" type="button" class="btn btn-default">Add Win</button>
-				<button id="btnReset" type="button" class="btn btn-default">Rest Wins</button>			
+				<button id="btnReset" type="button" class="btn btn-default">Reset Wins</button>			
 			</form>
 
 			<ul id="response">
