added lots of examples for module 4

--- a/php/InClassExercises/Module3/Quotes/Quotes.html
+++ b/php/InClassExercises/Module3/Quotes/Quotes.html
@@ -18,7 +18,7 @@
 	<body>
 		<!-- page content -->
 		<div class="container">
-			<h2>Guessing Game</h2>
+			<h2>Quotes</h2>
 			<form id="quoteForm">
 				<button id="btn" type="button" class="btn btn-default">Get a Quote</button>
 			</form>
