--- a/php/InClassExercises/Module4/CRUD-Users/Login.html
+++ b/php/InClassExercises/Module4/CRUD-Users/Login.html
@@ -68,8 +68,7 @@
 			{
 				$("#btnLogin").click(function ()
 				{
-			    	var url = "login";
-			    	sendCommand(url, "#loginForm");
+			    	sendCommand("login", "#loginForm");
             	});	
 			}
 			
